--- a/src/components/CalculationResults/CalculationResults.scss
+++ b/src/components/CalculationResults/CalculationResults.scss
@@ -23,6 +23,7 @@
     text-align: center;
     .resetBtn {
       @include form-button;
+      max-width: 80%;
     }
   }
 
