--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,5 @@
 $main-font-color: #565656;
-$main-font-size: 2rem;
+$main-font-size: 1.75rem;
 $widget-header-font-size: 2.2rem;
 $btn-font-size: 2.2rem;
 $page-header-font-size: 3rem;
